--- a/style.sass
+++ b/style.sass
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic')
 
 $navbar-color: #A67D3D
+$second-color: #5F9F9F
 $gallery-margin: 5%
 $gallery-margin-medium: 2%
 $margin-section: 30px
-
+.background-prop
+	background-size: cover
+	background-position: center
+	background-repeat: no-repeat
 * 
 	box-sizing: border-box
 
@@ -65,13 +69,13 @@ body
 
 .logo
 	img
-		width: 72px
-		height: 72px
+		width: 100px
+		height: 100px
 		position: absolute
 		left: 20px
 
 .header
-	background-color: #5F9F9F
+	background-color: $second-color
 	height: 60px
 	margin: 0 auto
 	border-bottom: 1px solid #fff
@@ -102,13 +106,12 @@ body
 
 
 .hero
-	background-image: url("https://images.pexels.com/photos/40064/theme-candid-portraits-smile-woman-girl-40064.jpeg?w=940&h=650&auto=compress&cs=tinysrgb")
+	background-image: url("img/hero.jpeg")
 	height: calc(100vh - 60px)
 	min-height: 300px
 	width: 100%
 	background-attachment: fixed
-	background-size: cover
-	background-position: center
+	@extent .background-prop
 
 .slogan
 	background-color: rgba(49, 50, 52,0.5)
@@ -128,29 +131,44 @@ body
 		text-shadow: 2px 2px 5px #fff
 
 .dog1
-	background-image: url("https://images.pexels.com/photos/51022/pexels-photo-51022.jpeg?w=940&h=650&auto=compress&cs=tinysrgb")
+	background-image: url("img/dog1.jpeg")
 	margin-right: $gallery-margin
 
 .dog2
-	background-image: url("https://images.pexels.com/photos/179107/pexels-photo-179107.jpeg?w=940&h=650&auto=compress&cs=tinysrgb")
+	background-image: url("img/dog2.jpeg")
 	margin-right: $gallery-margin
 
 .dog3
-	background-image: url("https://images.pexels.com/photos/60254/pexels-photo-60254.jpeg?w=940&h=650&auto=compress&cs=tinysrgb")
+	background-image: url("img/dog3.jpeg")
 
 .offer
 	margin-top: margin-section
 
 .offer
-	h2
+	h1
 		text-align: center
 		color: $navbar-color
 		padding-bottom: 30px
-
+		position: relative
+		font-size: 30px
+.offer
+	h1:after
+		content: ""
+		position: absolute
+		left: 50%
+		bottom: 40%
+		height: 5px
+		width: 0px
+		background-color: $navbar-color
+		transform: translateX(-50%)
+		transition-duration: 2s
+		transition-property: width
+.offer
+	h1:hover:after
+			width: 180px
 .gallery
-	background-size: cover
-	background-position: center
-	background-repeat: no-repeat
+	@extend .background-prop
+	position: relative;
 
 .layer
 	height: 100%
@@ -165,33 +183,94 @@ body
 	font-weight: bold
 
 .layer
+	p:nth-child(1)
+		color: #fff
+		font-size: 25px
+
+.layer:hover 
+		p:nth-child(2)
+			transition-delay: 0.2s
+			transform: scale(1.2)
+			transition-duration: 0.5s
+
+.layer
+	p:nth-child(3)
+		font-size: 25px
+		line-height: 30px
+		padding: 10px
+		display: inline-block
+		color: transparent
+
+.layer:hover
+	p:nth-child(3)
+		font-size: 30px
+		border: 2px solid $second-color
+		background-color: transparent
+		color: #fff
+		transition-delay: 0.4s
+		transform: scale(1.2)
+		transition-duration: 0.5s
+.layer
 	p
 		margin: 0
 
-.col-30offer
-	&:hover
-		.layer
-			background-color: rgba(0,0,0,0.5)
-			color: #fff
-			cursor: pointer
+.col-30offer:hover
+	.layer
+		background-color: rgba(0,0,0,0.5)
+		color: #fff
+		cursor: pointer
+.layer
+	h1
+		transition: 3s
 
 .directions
 	margin-top: margin-section
 	text-align: center
 
 .directions
-	h2
+	h1
 		text-align: center
 		color: $navbar-color
 		padding-bottom: 30px
+		position: relative
+		font-size: 30px
 
+.directions 
+	h1:after
+		content: ""
+		position: absolute
+		left: 50%
+		bottom: 40%
+		height: 5px
+		width: 0
+		background-color: $navbar-color
+		transform: translateX(-50%)
+		transition-duration: 2s
+		transition-property: width
+
+.directions
+	h1:hover:after
+		width: 100px
+
+.directions
+	i
+		.fa
+			border: 2px solid $second-color
+			height: 50px
+			width: 50px
+			font-size: 20px
+			text-align: center
+			line-height: 50px
+
+.row-flex
+	margin: 20px
 .map
 	img
 		width: 100%
 		height: auto
 
 footer
-	background-color: #5F9F9F
+	background-color: $second-color
 	text-align: center
 
 input, label
@@ -228,10 +307,8 @@ input, label
 		width: 32%
 
 	.dog1-m
-		background-image: url("https://images.pexels.com/photos/51022/pexels-photo-51022.jpeg?w=940&h=650&auto=compress&cs=tinysrgb")
 		margin-right: $gallery-margin-medium
 	.dog2-m
-		background-image: url("https://images.pexels.com/photos/179107/pexels-photo-179107.jpeg?w=940&h=650&auto=compress&cs=tinysrgb")
 		margin-right: $gallery-margin-medium
 
 /*tablet*/
@@ -264,11 +341,9 @@ input, label
 		width: 30%
 
 	.dog1-s
-		background-image: url("https://images.pexels.com/photos/51022/pexels-photo-51022.jpeg?w=940&h=650&auto=compress&cs=tinysrgb")
 		margin-bottom: 5%
 
 	.dog2-s
-		background-image: url("https://images.pexels.com/photos/179107/pexels-photo-179107.jpeg?w=940&h=650&auto=compress&cs=tinysrgb")
 		margin-bottom: 5%
 
 	.slogan-s
@@ -319,15 +394,13 @@ input, label
 	label
 		display: block
 		
-	#menu-button
-		&:not(:checked)
-			~ul
-				display: none
+	#menu-button:not(:checked)
+		~ul
+			display: none
 
-	#menu-button
-		&:checked
-			~ul
-				display: block
+	#menu-button:checked
+		~ul
+			display: block
 		
 	.hamburger-toggle
 		cursor: pointer
