--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic");
-.background-prop, .gallery {
+.background-prop, .hero, .gallery {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat; }
@@ -7,7 +7,7 @@
 * {
   box-sizing: border-box; }
 
-.row:after:before {
+.row:after, .row:before {
   content: "";
   display: table;
   clear: both; }
@@ -102,12 +102,11 @@ body {
   transition: 2.0s; }
 
 .hero {
-  background-image: url("img/hero.jpeg");
+  background-image: url("img/hero.jpg");
   height: calc(100vh - 60px);
   min-height: 300px;
   width: 100%;
-  background-attachment: fixed;
-  @extent .background-prop {} }
+  background-attachment: fixed; }
 
 .slogan {
   background-color: rgba(49, 50, 52, 0.5);
@@ -126,18 +125,18 @@ body {
   text-shadow: 2px 2px 5px #fff; }
 
 .dog1 {
-  background-image: url("img/dog1.jpeg");
+  background-image: url("img/dog1.jpg");
   margin-right: 5%; }
 
 .dog2 {
-  background-image: url("img/dog2.jpeg");
+  background-image: url("img/dog2.jpg");
   margin-right: 5%; }
 
 .dog3 {
-  background-image: url("img/dog3.jpeg"); }
+  background-image: url("img/dog3.jpg"); }
 
 .offer {
-  margin-top: margin-section; }
+  margin-top: 30px; }
 
 .offer h1 {
   text-align: center;
@@ -168,10 +167,9 @@ body {
   height: 100%;
   width: 100%;
   text-align: center;
-  line-height: 300px;
+  line-height: 150px;
   color: transparent;
   background-color: transparent;
-  transition: 2.0s;
   padding: 0;
   text-transform: uppercase;
   font-weight: bold; }
@@ -213,7 +211,7 @@ body {
   transition: 3s; }
 
 .directions {
-  margin-top: margin-section;
+  margin-top: 30px;
   text-align: center; }
 
 .directions h1 {
@@ -238,7 +236,7 @@ body {
 .directions h1:hover:after {
   width: 100px; }
 
-.directions i .fa {
+.directions i.fa {
   border: 2px solid #5F9F9F;
   height: 50px;
   width: 50px;
@@ -360,6 +358,11 @@ input, label {
     padding: 0;
     text-transform: uppercase;
     font-weight: bold; }
+  .layer p:nth-child(3) {
+    font-size: 30px;
+    border: 2px solid #5F9F9F;
+    background-color: transparent;
+    color: #fff; }
   /*hamburger*/
   label {
     display: block; }
