--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 .no-padding {
   padding: 0; }
 
-/*desctop*/
+/*desctop */
 .col-1 {
   width: 8.33%; }
 
@@ -62,7 +62,7 @@
 
 body {
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #FCFAE2; }
 
 .container {
@@ -99,7 +99,7 @@ body {
 
 .navbar ul li:hover a {
   background-color: #A67D3D;
-  transition: 2.0s; }
+  transition: 2s; }
 
 .hero {
   background-image: url("img/hero.jpg");
@@ -118,7 +118,8 @@ body {
   letter-spacing: 3px;
   padding-right: 20px;
   padding-left: 20px;
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  z-index: 2; }
 
 .slogan h1 {
   color: #A67D3D;
@@ -258,72 +259,100 @@ footer {
 input, label {
   display: none; }
 
-/*RWD*/
-/*medium class*/
-@media (min-width: 768px) and (max-width: 1199px) {
+/*RWD */
+/*medium class */
+@media(min-width: 768px) and (max-width: 1199px) {
   .col-m-1 {
     width: 8.33%; }
+
   .col-m-2 {
     width: 16.66%; }
+
   .col-m-3 {
     width: 25%; }
+
   .col-m-4 {
     width: 33.33%; }
+
   .col-m-5 {
     width: 41.66%; }
+
   .col-m-6 {
     width: 50%; }
+
   .col-m-7 {
     width: 58.33%; }
+
   .col-m-8 {
     width: 66.66%; }
+
   .col-m-9 {
     width: 75%; }
+
   .col-m-10 {
     width: 83.33%; }
+
   .col-m-11 {
     width: 91.66%; }
+
   .col-m-12 {
     width: 100%; }
+
   .col-m-32offer {
     width: 32%; }
+
   .dog1-m {
     margin-right: 2%; }
+
   .dog2-m {
     margin-right: 2%; } }
-
-/*tablet*/
-@media (max-width: 767px) {
+/*tablet */
+@media(max-width: 767px) {
   .col-1 {
     width: 8.33%; }
+
   .col-2 {
     width: 16.66%; }
+
   .col-3 {
     width: 25%; }
+
   .col-4 {
     width: 33.33%; }
+
   .col-5 {
     width: 41.66%; }
+
   .col-6 {
     width: 50%; }
+
   .col-7 {
     width: 58.33%; }
+
   .col-8 {
     width: 66.66%; }
+
   .col-9 {
     width: 75%; }
+
   .col-10 {
     width: 83.33%; }
+
   .col-11 {
     width: 91.66%; }
+
   .col-s-12 {
     width: 100%; }
+
   .col-s-30offer {
     width: 30%; }
+
   .dog1-s {
     margin-bottom: 5%; }
+
   .dog2-s {
     margin-bottom: 5%; }
+
   .slogan-s {
     background-color: rgba(49, 50, 52, 0.5);
     float: right;
@@ -335,6 +364,16 @@ input, label {
     padding-right: 20px;
     padding-left: 20px;
     font-size: 1rem; }
+
+  .menu-nav {
+    width: 100%;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    z-index: 1;
+    padding: 0;
+    margin: 0; }
+
   .navbar ul li {
     line-height: 30px;
     display: block;
@@ -345,8 +384,10 @@ input, label {
     background-color: rgba(95, 159, 159, 0.5);
     width: 100vw;
     padding: 15px; }
+
   .navbar ul li:hover a {
     background-color: rgba(95, 159, 159, 0); }
+
   .layer {
     height: 100%;
     width: 100%;
@@ -354,22 +395,27 @@ input, label {
     line-height: 300px;
     color: #fff;
     background-color: transparent;
-    transition: 2.0s;
+    transition: 2s;
     padding: 0;
     text-transform: uppercase;
     font-weight: bold; }
+
   .layer p:nth-child(3) {
     font-size: 30px;
     border: 2px solid #5F9F9F;
     background-color: transparent;
     color: #fff; }
-  /*hamburger*/
+
+  /*hamburger */
   label {
     display: block; }
+
   #menu-button:not(:checked) ~ ul {
     display: none; }
+
   #menu-button:checked ~ ul {
     display: block; }
+
   .hamburger-toggle {
     cursor: pointer;
     position: absolute;
@@ -383,7 +429,8 @@ input, label {
     background-color: #A67D3D;
     position: absolute;
     display: block;
-    content: ''; }
+    content: ""; }
+
   .hamburger-toggle:before {
     cursor: pointer;
     border-radius: 1px;
@@ -392,8 +439,9 @@ input, label {
     background-color: #A67D3D;
     position: absolute;
     display: block;
-    content: '';
+    content: "";
     top: -10px; }
+
   .hamburger-toggle:after {
     cursor: pointer;
     border-radius: 1px;
@@ -402,7 +450,7 @@ input, label {
     background-color: #A67D3D;
     position: absolute;
     display: block;
-    content: '';
+    content: "";
     bottom: -10px; } }
 
 /*# sourceMappingURL=style.css.map */
