--- a/style.sass
+++ b/style.sass
@@ -122,6 +122,7 @@ body
 	padding-right: 20px
 	padding-left: 20px
 	font-size: 1.5rem
+	z-index: 2
 
 .slogan
 	h1
@@ -368,6 +369,14 @@ input, label
 		padding-left: 20px
 		font-size: 1rem
 
+	.menu-nav
+		width: 100%
+		position: absolute
+		top: 60px
+		left: 0
+		z-index: 1
+		padding: 0
+		margin: 0
 	.navbar
 		ul
 			li
