--- a/style.css
+++ b/style.css
@@ -392,10 +392,9 @@ input, label {
     height: 100%;
     width: 100%;
     text-align: center;
-    line-height: 300px;
+    line-height: 150px;
     color: #fff;
     background-color: transparent;
-    transition: 2s;
     padding: 0;
     text-transform: uppercase;
     font-weight: bold; }
@@ -405,6 +404,16 @@ input, label {
     border: 2px solid #5F9F9F;
     background-color: transparent;
     color: #fff; }
+
+  .layer:hover p:nth-child(2) {
+    transition-delay: 0;
+    transform: scale(1);
+    transition-duration: 0; }
+
+  .layer:hover p:nth-child(3) {
+    transition-delay: 0;
+    transform: scale(1);
+    transition-duration: 0; }
 
   /*hamburger */
   label {
