--- a/style.sass
+++ b/style.sass
@@ -401,10 +401,9 @@ input, label
 		height: 100%
 		width: 100%
 		text-align: center
-		line-height: 300px
+		line-height: 150px
 		color: #fff
 		background-color: transparent
-		transition: 2.0s
 		padding: 0
 		text-transform: uppercase
 		font-weight: bold
@@ -415,7 +414,21 @@ input, label
 				border: 2px solid $second-color
 				background-color: transparent
 				color: #fff
-	
+	.layer
+		&:hover
+			p
+				&:nth-child(2)
+					transition-delay: 0
+					transform: scale(1.0)
+					transition-duration: 0			
+	.layer
+		&:hover
+			p
+				&:nth-child(3)
+					transition-delay: 0
+					transform: scale(1.0)
+					transition-duration: 0
+
 	/*hamburger*/
 	label
 		display: block
