--- a/css/style.sass
+++ b/css/style.sass
@@ -12,6 +12,10 @@ $margin-section: 30px
 * 
 	box-sizing: border-box
 
+#mapid
+	height: 400px
+	width: 600px
+
 .row:after, .row:before 
 	content: ""
 	display: table
@@ -104,7 +108,7 @@ body
 
 
 .hero
-	background-image: url("img/hero.jpg")
+	background-image: url("../img/hero.jpg")
 	height: calc(100vh - 60px)
 	min-height: 300px
 	width: 100%
@@ -130,15 +134,15 @@ body
 		text-shadow: 2px 2px 5px #fff
 
 .dog1
-	background-image: url("img/dog1.jpg")
+	background-image: url("../img/dog1.jpg")
 	margin-right: $gallery-margin
 
 .dog2
-	background-image: url("img/dog2.jpg")
+	background-image: url("../img/dog2.jpg")
 	margin-right: $gallery-margin
 
 .dog3
-	background-image: url("img/dog3.jpg")
+	background-image: url("../img/dog3.jpg")
 
 .offer
 	margin-top: $margin-section
