--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
 * {
   box-sizing: border-box; }
 
+#mapid {
+  height: 400px;
+  width: 600px; }
+
 .row:after, .row:before {
   content: "";
   display: table;
@@ -102,7 +106,7 @@ body {
   transition: 2s; }
 
 .hero {
-  background-image: url("img/hero.jpg");
+  background-image: url("../img/hero.jpg");
   height: calc(100vh - 60px);
   min-height: 300px;
   width: 100%;
@@ -126,15 +130,15 @@ body {
   text-shadow: 2px 2px 5px #fff; }
 
 .dog1 {
-  background-image: url("img/dog1.jpg");
+  background-image: url("../img/dog1.jpg");
   margin-right: 5%; }
 
 .dog2 {
-  background-image: url("img/dog2.jpg");
+  background-image: url("../img/dog2.jpg");
   margin-right: 5%; }
 
 .dog3 {
-  background-image: url("img/dog3.jpg"); }
+  background-image: url("../img/dog3.jpg"); }
 
 .offer {
   margin-top: 30px; }
