--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ body {
   background-image: url("../img/dog3.jpg"); }
 
 .offer {
-  margin-top: 30px; }
+  margin-top: 60px; }
 
 .offer h1 {
   text-align: center;
@@ -216,7 +216,7 @@ body {
   transition: 3s; }
 
 .directions {
-  margin-top: 30px;
+  margin-top: 60px;
   text-align: center; }
 
 .directions h1 {
@@ -251,6 +251,69 @@ body {
 
 .row-flex {
   margin: 20px; }
+
+.opinion {
+  margin-top: 60px; }
+
+.opinion h1 {
+  text-align: center;
+  color: #A67D3D;
+  padding-bottom: 30px;
+  position: relative;
+  font-size: 30px; }
+
+.opinion h1:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 40%;
+  height: 5px;
+  width: 0px;
+  background-color: #A67D3D;
+  transform: translateX(-50%);
+  transition-duration: 2s;
+  transition-property: width; }
+
+.opinion h1:hover:after {
+  width: 180px; }
+
+#carousel {
+  margin-top: 60px;
+  width: 1200px;
+  height: 400px;
+  margin: 0 auto;
+  overflow: hidden;
+  border: 2px solid #fff;
+  position: relative; }
+
+#carousel img {
+  width: 800px;
+  height: 100%;
+  float: right; }
+
+#carousel ul li {
+  width: 1200px;
+  height: 100%;
+  float: left;
+  position: relative; }
+
+#carousel ul {
+  height: 400px;
+  width: 7200px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0; }
+
+#carousel ul li p {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 800px;
+  text-align: right;
+  font-size: 20px;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.8);
+  margin: 0px; }
 
 .map img {
   width: 100%;
