--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 #mapid {
   height: 400px;
-  width: 600px; }
+  width: 100%; }
 
 .row:after, .row:before {
   content: "";
@@ -372,7 +372,35 @@ input, label {
     margin-right: 2%; }
 
   .dog2-m {
-    margin-right: 2%; } }
+    margin-right: 2%; }
+
+  #carousel {
+    width: 800px;
+    height: 400px;
+    margin: 0 auto;
+    overflow: hidden;
+    border: 2px solid #fff;
+    position: relative; }
+
+  #carousel ul li {
+    width: 800px;
+    height: 100%;
+    float: left;
+    position: relative; }
+
+  #carousel ul {
+    height: 400px;
+    width: 4800px;
+    list-style-type: none;
+    padding: 0;
+    margin: 0; }
+
+  #carousel img {
+    width: 80%;
+    height: 400px; }
+
+  #carousel ul li p {
+    right: 80%; } }
 /*tablet */
 @media(max-width: 767px) {
   .col-1 {
@@ -527,6 +555,15 @@ input, label {
     position: absolute;
     display: block;
     content: "";
-    bottom: -10px; } }
+    bottom: -10px; }
+
+  #carousel {
+    width: 100%; }
+
+  #carousel img {
+    width: 100%; }
+
+  #carousel ul li p {
+    right: 80%; } }
 
 /*# sourceMappingURL=style.css.map */
