--- a/css/style.sass
+++ b/css/style.sass
@@ -14,13 +14,12 @@ $margin-section: 60px
 
 #mapid
 	height: 400px
-	width: 600px
+	width: 100%
 
 .row:after, .row:before 
 	content: ""
 	display: table
 	clear: both
-
 
 [class*="col-"] 
 	float: left
@@ -396,6 +395,37 @@ input, label
 		margin-right: $gallery-margin-medium
 	.dog2-m
 		margin-right: $gallery-margin-medium
+	#carousel
+		width: 800px
+		height: 400px
+		margin: 0 auto
+		overflow: hidden
+		border: 2px solid #fff
+		position: relative
+	#carousel
+		ul
+			li
+				width: 800px
+				height: 100%
+				float: left
+				position: relative
+	#carousel
+		ul
+			height: 400px
+			width: 4800px
+			list-style-type: none
+			padding: 0
+			margin: 0
+	#carousel
+		img
+			width: 80%
+			height: 400px
+
+	#carousel
+		ul
+			li
+				p
+					right: 80%
 
 /*tablet*/
 @media(max-width: 767px)
@@ -556,5 +586,14 @@ input, label
 			display: block
 			content: ''
 			bottom: -10px
-
+	#carousel
+		width: 100%
+	#carousel
+		img
+			width: 100%
+	#carousel
+		ul
+			li
+				p
+					right: 80%
 
