--- a/css/style.css
+++ b/css/style.css
@@ -315,10 +315,6 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   margin: 0px; }
 
-.map img {
-  width: 100%;
-  height: auto; }
-
 footer {
   background-color: #5F9F9F;
   text-align: center; }
@@ -375,29 +371,10 @@ input, label {
     margin-right: 2%; }
 
   #carousel {
-    width: 800px;
-    height: 400px;
-    margin: 0 auto;
-    overflow: hidden;
-    border: 2px solid #fff;
-    position: relative; }
-
-  #carousel ul li {
-    width: 800px;
-    height: 100%;
-    float: left;
-    position: relative; }
-
-  #carousel ul {
-    height: 400px;
-    width: 4800px;
-    list-style-type: none;
-    padding: 0;
-    margin: 0; }
+    width: 100%; }
 
   #carousel img {
-    width: 80%;
-    height: 400px; }
+    width: 100%; }
 
   #carousel ul li p {
     right: 80%; } }
