--- a/css/style.sass
+++ b/css/style.sass
@@ -4,7 +4,7 @@ $navbar-color: #A67D3D
 $second-color: #5F9F9F
 $gallery-margin: 5%
 $gallery-margin-medium: 2%
-$margin-section: 60px
+$margin-section: 150px
 .background-prop
 	background-size: cover
 	background-position: center
@@ -150,7 +150,7 @@ body
 	h1
 		text-align: center
 		color: $navbar-color
-		padding-bottom: 30px
+		padding-bottom: 80px
 		position: relative
 		font-size: 30px
 .offer
@@ -284,7 +284,7 @@ body
 	h1
 		text-align: center
 		color: $navbar-color
-		padding-bottom: 30px
+		padding-bottom: 80px
 		position: relative
 		font-size: 30px
 .opinion
@@ -308,7 +308,7 @@ body
 #carousel
 	margin-top: $margin-section
 	width: 1200px
-	height: 400px
+	height: 600px
 	margin: 0 auto
 	overflow: hidden 
 	border: 2px solid #fff
@@ -316,7 +316,7 @@ body
 
 #carousel
 	img
-		width: 800px
+		width: 100%
 		height: 100%
 		float: right
 #carousel
@@ -329,7 +329,7 @@ body
 
 #carousel
 	ul
-		height: 400px
+		height: 600px
 		width: 7200px
 		list-style-type: none
 		padding: 0
@@ -339,15 +339,57 @@ body
 	ul
 		li
 			p
+				color: #bbb
 				position: absolute
-				top: 0
-				bottom: 0
-				right: 800px
-				text-align: right
-				font-size: 20px
 				padding: 20px
-				background-color: rgba(255,255,255,0.8)
-				margin: 0px
+				top: 40%
+				bottom: 60%
+				margin: 40px
+				height: 100px
+				text-align: center
+				font-size: 20px
+				background-color: rgba(0,0,0,0.3)
+				-webkit-box-shadow: 0px 0px 20px 10px rgba(87,83,87,1)
+				-moz-box-shadow: 0px 0px 20px 10px rgba(87,83,87,1)
+				box-shadow: 0px 0px 20px 10px rgba(87,83,87,1)
+
+.arrow
+	justify-content: space-between
+	align-items: center
+	cursor: pointer
+	display: flex
+	text-shadow: 2px 2px 2px #000000
+
+.arrow
+	p:nth-child(1)
+		font-size: 40px
+		color: #ebebe0
+		position: absolute
+		top: 100
+		bottom: 0
+		right: 70px
+		left: 100
+		padding: 10px
+		background-color: rgba(0,0,0,0.3)
+		-webkit-box-shadow: 0px 0px 20px 5px rgba(87,83,87,1)
+		-moz-box-shadow: 0px 0px 20px 5px rgba(87,83,87,1)
+		box-shadow: 0px 0px 20px 5px rgba(87,83,87,1)
+
+.arrow
+	p:nth-child(2)
+		font-size: 40px
+		color: #ebebe0
+		position: absolute
+		top: 100
+		bottom: 0
+		left: 100
+		right: 10px
+		padding: 10px
+		background-color: rgba(0,0,0,0.3)
+		-webkit-box-shadow: 0px 0px 20px 5px rgba(87,83,87,1)
+		-moz-box-shadow: 0px 0px 20px 5px rgba(87,83,87,1)
+		box-shadow: 0px 0px 20px 5px rgba(87,83,87,1)
+
 
 footer
 	background-color: $second-color
@@ -399,7 +441,9 @@ input, label
 		ul
 			li
 				p
-					right: 80%
+					right: 0
+					left: 0
+					margin: 0
 
 /*tablet*/
 @media(max-width: 767px)
@@ -569,4 +613,6 @@ input, label
 		ul
 			li
 				p
-					right: 80%
+					right: 0
+					left: 0
+					margin: 0
